--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.2.2.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Retorno de Action como Json -->
